--- a/BCoA.css
+++ b/BCoA.css
@@ -405,7 +405,7 @@ a:hover, a:active, body_ahover {
 	border-bottom: 1px #eeeeee solid;
 	text-shadow: 0 1px 0 #FFF;
 }
-#fa_toolbar{
+#fa_toolbar, #fa_toolbar_hidden{
 	background: #ce328c url('http://i56.servimg.com/u/f56/14/71/20/17/btcat13.png') repeat-x center top;
 	color: #FFF;
 	text-shadow: 0 1px 0 #841053;
