--- a/BCoB.css
+++ b/BCoB.css
@@ -366,7 +366,7 @@ a:hover, a:active, body_ahover {
 .tcat a:hover, .tcat a:active, .tcat_ahover {
 	color: #FFF;
 }
-#fa_toolbar {
+#fa_toolbar, #fa_toolbar_hidden {
 	background: #009fd2 url('http://i56.servimg.com/u/f56/14/71/20/17/btcat10.png') repeat-x center top;
 	color: #FFF;
 	text-shadow: 0 1px 0 #086c8d;
