--- a/BCoC.css
+++ b/BCoC.css
@@ -357,7 +357,7 @@ a:hover, a:active, body_ahover {
 	text-shadow: 0 1px 0 #723c00;
 	border-bottom: 1px #b35e00 solid;
 }
-#fa_toolbar{
+#fa_toolbar, #fa_toolbar_hidden{
 	background: #c86900 url('http://i56.servimg.com/u/f56/14/71/20/17/btcat12.png') repeat-x center top;
 	color: #FFF;
 	text-shadow: 0 1px 0 #723c00;
