--- a/BCoE.css
+++ b/BCoE.css
@@ -367,7 +367,7 @@ a:hover, a:active, body_ahover {
 	color: #FFF;
 }
 
-#fa_toolbar {
+#fa_toolbar, #fa_toolbar_hidden {
 	background: #840002 url('http://i56.servimg.com/u/f56/14/71/20/17/btcat16.png') repeat-x center top;
 	color: #FFF;
 	text-shadow: 0 1px 0 #220001;
