--- a/BCoD.css
+++ b/BCoD.css
@@ -26,6 +26,10 @@ ul, li, h1, h2, h3, h4 {
 	list-style: none;
 	list-style-position: inside;
 }
+html#min-width a, html a{
+    text-decoration: none;
+}
+
 h1 {
 	font-size: 12px;
 }
